[tool.poetry]
name = "jupyter_output_types"
version = "0.1.0"
description = ""
authors = ["Roman Hlushko <roman.hlushko@datarobot.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.3.5"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.5.0"
ipywidgets = "^7.6.5"
bokeh = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
